--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -2,6 +2,6 @@
 
 #footer {
   padding: 0.5rem;
-  border-top: 1px solid $theme-dark;
-  margin-top: 1px;
+  border-top: 1px solid $theme-dark-dark;
+  background-color: $theme-dark;
 }
