--- a/src/app/project/project-overview/project-overview.component.scss
+++ b/src/app/project/project-overview/project-overview.component.scss
@@ -5,7 +5,7 @@
   margin: auto;
 }
 
-as-profile-title {
+div[as-profile-title] {
   font-size: $font-size-xxxl;
   color: $theme-light;
 
@@ -18,7 +18,8 @@ as-profile-title {
   }
 }
 
-as-profile-details {
+
+div[as-profile-details] {
   mat-icon {
     margin-right: 1em;
   }
@@ -29,8 +30,13 @@ as-profile-details {
 
   .detail-item {
     padding: 0.25em;
-    font-size: $font-size-xl;
+    font-size: $font-size-xs;
     margin-right: 1em;
+  }
+
+  mat-icon {
+    height: 16px;
+    width: 16px;
   }
 }
 
