--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -4,8 +4,8 @@ $theme-green: #787e62;
 $theme-green-light: #b1bc91;
 $theme-green-dark: #282a1c;
 
-$theme-dark: #404240;
-$theme-dark-dark: #1E1F1D;
+$theme-dark: #333333;
+$theme-dark-dark: #222222;
 $theme-dark-light: #717571;
 
 $theme-light: #BCC2BB;
