--- a/src/app/about/about-work/about-work.component.html
+++ b/src/app/about/about-work/about-work.component.html
@@ -5,10 +5,10 @@
     fxLayoutAlign="start stretch"
     *ngIf="job">
     <as-profile-template [image]="job.photo">
-      <as-profile-title>
+      <div as-profile-title>
         <span class="company">{{job.company}}</span>
-      </as-profile-title>
-      <as-profile-details>
+      </div>
+      <div as-profile-details>
         <div class="detail-items" fxLayout="row" fxLayout="space-between center">
           <div fxLayout="column">
             <div class="work-title detail-item">
@@ -54,7 +54,7 @@
             </div>
           </div>
         </div>
-      </as-profile-details>
+      </div>
     </as-profile-template>
     <as-profile-box heading="Responsibilities">
       <ul>
