--- a/src/app/footer/footer-links/footer-links.component.scss
+++ b/src/app/footer/footer-links/footer-links.component.scss
@@ -12,11 +12,13 @@
   &__link {
     cursor: pointer;
     display: block;
-    padding: 8px 2px;
+    padding: 2px;
     margin: 0 10px;
-    color: inherit;
     text-decoration: none;
     outline: none;
+    color: $theme-dark-light;
+    line-height: $font-size-md;
+    font-size: $font-size-xxs;
 
     &:hover {
       color: $theme-primary;
