--- a/src/app/shared/profile/profile-template/profile-template.component.html
+++ b/src/app/shared/profile/profile-template/profile-template.component.html
@@ -9,10 +9,10 @@
     </as-profile-box>
     <div class="overview" fxLayout="column" fxLayoutAlign="space-between stretch">
       <as-profile-box>
-        <ng-content select="as-profile-title"></ng-content>
+        <ng-content select="[as-profile-title]"></ng-content>
       </as-profile-box>
       <as-profile-box>
-        <ng-content select="as-profile-details"></ng-content>
+        <ng-content select="[as-profile-details]"></ng-content>
       </as-profile-box>
     </div>
   </div>
