--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -1,41 +1,43 @@
 @import '~scss/styles.scss';
 
-ul {
-  max-width: 70px;
-  padding: 0;
-  margin: 0.5rem 0;
-  border-radius: 4px;
-  color: $theme-light;
-  font-size: $font-size-xs;
-  font-stretch: extra-condensed;
-  background-color: $theme-dark;
-}
+.sidebar {
+  &__list {
+    max-width: 70px;
+    padding: 0;
+    margin: 0.5rem 0;
+    border-radius: 4px;
+    color: $theme-light;
+    font-size: $font-size-xs;
+    font-stretch: extra-condensed;
+    background-color: $theme-dark;
 
-li {
-  padding: 0;
-  list-style: none;
+    &__item {
+      padding: 0;
+      list-style: none;
+    
+      &:not(:last-child) {
+        border-bottom: 1px solid $theme-dark-dark;
+      }
 
-  &:not(:last-child) {
-    border-bottom: 1px solid $theme-dark-dark;
-  }
-}
-
-a {
-  cursor: pointer;
-  display: block;
-  padding: 8px;
-  margin: 0;
-  color: inherit;
-  text-decoration: none;
-  outline: none;
-  border-left: 5px solid transparent;
-
-  &:hover {
-    color: $theme-primary;
-  }
-
-  &.active {
-    color: $theme-primary;
-    border-left: 5px solid $theme-primary;
+      &__link {
+        cursor: pointer;
+        display: block;
+        padding: 8px;
+        margin: 0;
+        color: inherit;
+        text-decoration: none;
+        outline: none;
+        border-left: 5px solid transparent;
+      
+        &:hover {
+          color: $theme-primary;
+        }
+      
+        &.active {
+          color: $theme-primary;
+          border-left: 5px solid $theme-primary;
+        }
+      }
+    }
   }
 }
